update levels api
